--- a/house_pricing.ipynb
+++ b/house_pricing.ipynb
@@ -5363,6 +5363,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### TODO: visualize pred vs true"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "px.line()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## XGBoost"
    ]
   },
